# Rug_Radar

./: .env.example  .gitignore  Dockerfile  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  metadata.json  package-lock.json  package.json  render.yaml  server.ts
backend-cpp/: CMakeLists.txt  Dockerfile  backup.sh  main.cpp
core/analytics/: main.py  requirements.txt
core/scanner/: CMakeLists.txt  main.cpp
infra/: docker-compose.yml
prisma/: schema.prisma
src/: App.tsx  index.css  store.ts  types.d.ts
src/components/: NotificationToast.tsx  TokenCardSkeleton.tsx
src/lib/: db.ts  socket.ts  utils.ts
src/pages/: About.tsx  CoinChecker.tsx  Compare.tsx  Dashboard.tsx  Pricing.tsx  Recommendations.tsx  TokenDetail.tsx
